maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:36: error: not found: type INt
  var n:INt=litMessage().toInt
        ^